# streamcat

./: .gitignore  .travis.yml  CHANGELOG.rst  README.rst  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py
streamcat/: __init__.py  core.py
tests/: test_core.py
